# fotocopy-warung-management-system

./: .replit  README.md  app.py  migrate_database.py  pyproject.toml
Akumulasi-Harga-Produk-main/: LICENSE  README.md  app.py  build_exe.py  main.py  models.py  pyproject.toml  replit.md  routes.py  start_app.bat  start_app.sh
JagoNabung-main/: README.md  app.py  app_old.py  savings_tracker.spec  setup.py
KasirApp-main/: README.md  app.py  cert.pem  databases.db  key.pem  pyproject.toml  ssl_cert.crt  ssl_cert.key  ssl_cert.pem  ssl_key.pem
ServiceNote-main/: README.md  app.py  chrome_launcher.py  database.py  launch_chrome.bat  models.py  pdf_generator.py  replit.md  routes.py  run.sh  start_app.py  start_windows.py
Tabungan Report/: print_receipt.html
attached_assets/: Pasted-KeyError-KeyError-name-Traceback-most-recent-call-last-File-home-runner-workspace-pytho-1755910984798_1755910984799.txt  Pasted-OperationalError-sqlalchemy-exc-OperationalError-sqlite3-OperationalError-no-such-column-produc-1755862409522_1755862409523.txt  Pasted-OperationalError-sqlalchemy-exc-OperationalError-sqlite3-OperationalError-no-such-column-produc-1755905182727_1755905182728.txt  Pasted-OperationalError-sqlalchemy-exc-OperationalError-sqlite3-OperationalError-no-such-column-produc-1755905375830_1755905375830.txt  Pasted-TemplateNotFound-jinja2-exceptions-TemplateNotFound-inventory-list-html-Traceback-most-recent--1755860866037_1755860866038.txt  Pasted-TemplateNotFound-jinja2-exceptions-TemplateNotFound-invoices-list-html-Traceback-most-recent-c-1755861025251_1755861025252.txt  (+8 more)
(+83 files in other folders)
