[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "python-barcode[images]>=0.15.1",
    "qrcode[pil]>=8.2",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
]
